Add commit pagination and improve RAG setup
Implements commit list pagination in the frontend and backend, updating API endpoints and caching logic to support offset/limit. Adds RAG database setup documentation, improves Oracle table handling, and updates JPA config to avoid dropping tables on restart. Also fixes minor issues in embedding and commit caching logic.